style(ContactDetails): fix float contaxt collapsing issue

--- a/packages/ringcentral-widgets/components/ContactDetails/styles.scss
+++ b/packages/ringcentral-widgets/components/ContactDetails/styles.scss
@@ -31,6 +31,7 @@
   padding: 20px 0;
   list-style: none;
   .item {
+    overflow: hidden;
     min-width: 250px;
     &:not(:first-child) {
       margin-top: 20px;
